--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "showsoy"
 title: "showsoy"
-description: "Jekyll template, Medium styled, free for bloggers."
+description: "-"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
